
/// Class for holding string constants
class StringConstants {
  static const String appTitle = "Test Demo";
  static const String appBarTitle = "Home";
  static const String tabItem1Title = "Tab 1";
  static const String tabItem2Title = "Tab 2";
  static const String textTitle = "Text on the Tab 1";
  static const String buttonTittle = "Button on the Tab 2";
  static const String snacBarMessage = "Button is clicked";
}
